// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`supports CJS projects written CJS syntax: stderr 1`] = `""`;

exports[`supports CJS projects written CJS syntax: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/cjs-syntax.tst.cts

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'cjs-syntax'.
"
`;

exports[`supports CJS projects written in ESM syntax: stderr 1`] = `""`;

exports[`supports CJS projects written in ESM syntax: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/esm-syntax.tst.ts
  + is supported?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'esm-syntax'.
"
`;
